# goodbudget_cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  run_goodbudget.py  setup.cfg  utils.py
goodbudget_cli/: config.json  envelopes.json  run_goodbudget.py
goodbudget_cli/test/: test_goodbudget.py
goodbudget_cli/utils/: driver.py  util.py
tests/: test_goodbudget.py
