[metadata]
name = goodbudget_cli
version = 0.1.0
author = Phillip Yen
author_email = yphillip@gmail.com
description = A command line tool for interacting with Goodbudget

[options]
packages =
    goodbudget_cli
    goodbudget_cli.utils
python_requires = >=3.7
install_requires = 
    selenium>=4.7.2

[options.entry_points]
console_scripts = 
    gb = goodbudget_cli.run_goodbudget:main
