[metadata]
name = goodbudget_cli
version = 0.1.1
author = Phillip Yen
author_email = yphillip@gmail.com
description = A command line tool for interacting with Goodbudget
description-file = README.md
long_description_content_type = text/markdown

[options]
packages =
    goodbudget_cli
    goodbudget_cli.utils
python_requires = >=3.7
install_requires = 
    selenium>=4.7.2
include_package_data = True

[options.entry_points]
console_scripts = 
    gb = goodbudget_cli.run_goodbudget:main
