[metadata]
name = goodbudget_cli
version = 0.2.1
author = Phillip Yen
author_email = yphillip@gmail.com
description = A command line tool for interacting with Goodbudget
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yphillip/goodbudget_cli

[options]
packages =
    goodbudget_cli
    goodbudget_cli.utils
python_requires = >=3.7
install_requires = 
    selenium>=4.7.2
include_package_data = True

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts = 
    gb = goodbudget_cli.run_goodbudget:main
